# artifice

./: Artifice.desktop  Artífice.spec  README.md  app.py  pyproject.toml  setup.iss
.github/workflows/: build-release.yml
